--- a/connect4.css
+++ b/connect4.css
@@ -1,26 +1,58 @@
-/* game board table */
 html {
+  background-image: url(images/purplespace.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  margin: auto;
+  padding: auto;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+/* game board table */
+body {
 font-family: 'Passion One', sans-serif;
+margin: auto;
+width: auto;
+padding-left: 200px;
+width: 100%;
+height: 100%;
+display: flex;
+justify-content: center;
+align-items: center; 
+text-align: center;
+
+}
+
+.title {
+  font-size: 2.2em;
+  color:white;
+  width: 400px;
 }
 
 #game{
+  padding: 45px;
   margin-left: auto;
-  margin-right: auto;
-  justify-self: center\;
+  text-align: center;
+  width: 1050px;
+  justify-content: center;
+
 }
 
 #board td {
   width: 50px;
   height: 50px;
   border: solid 1px #666;
+  background-color: rgba(67, 37, 105, .6);
+  justify-content: center;
 }
-
 
 .piece {
   margin: 5px;
   width: 80%;
   height: 80%;
   border-radius: 50%;
+  animation: fall 0.5s ease-out;
 }
 
 .piece.p1 {
@@ -34,27 +66,40 @@ font-family: 'Passion One', sans-serif;
 /* column-top is table row of clickable areas for each column */
 
 #column-top td {
+  background-color: rgba(67, 37, 105, .3);
   border: dashed 1px lightgray;
 }
 
 #column-top td:hover {
+  cursor: pointer;
   background-color: gold;
 }
 
 
-input {
 
-}
-
-#startButton {
+button {
   margin: 25px;
   border-radius: 12px;
   height: 40px;
   width: 100px;
   line-height: 40px; 
+  border-style: none;
   text-align: center;
   display: inline-block; 
   cursor: pointer; 
   background-color: blue;
   color: white;
+  font-size: larger;
+  font-family: 'Passion One', sans-serif;
+}
+
+@keyframes fall {
+  0% {
+    transform: translateY(-470px); /* Start position: above the final spot */
+    opacity: 0; /* Optionally start with invisible piece */
+  }
+  100% {
+    transform: translateY(0); /* End position: final spot */
+    opacity: 1; /* Optionally end with fully visible piece */
+  }
 }
